fix text align

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -640,20 +640,24 @@ body {
 .users-div {
     width: 50%;
     height: 342px;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    align-items: center;
-    justify-content: space-between;
-    padding: 66px 370px 66px 90px;
+    padding: 66px 470px 66px 90px;
     background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
 }
 
 .users-div-text {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*text-align: left;*/
-    /*justify-content: space-between;*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.users-div-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: right;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
 }
 
 .users-div_p {
@@ -671,5 +675,6 @@ body {
     line-height: 23px;
     letter-spacing: 0.03em;
     color: #5E80FF;
+    text-align: left;
 }
 /*statistics end*/
